# step-counter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  bluetooth.py  connect-and-plot.py  dvc.yaml  params.yaml  pyproject.toml  requirements.in  requirements.txt  serial-plot.py  update-metrics-table-and-graph.py
.dvc/: config
arduino/Accelerometer/: Accelerometer.ino  Model.h
arduino/Buttons/: Buttons.ino
arduino/Test/: Test.ino
data/steps/: test.dvc  train.dvc
data/steps/test/: .gitignore  accelerometer-data-2023-09-01 07:49:52.631649.csv.dvc  accelerometer-data-2023-09-01 07:54:26.715226.csv.dvc
data/steps/train/: .gitignore  accelerometer-data-2023-08-25 20:31:42.558559.csv.dvc  accelerometer-data-2023-09-01 07:51:30.084540.csv.dvc  accelerometer-data-2023-09-01 07:54:07.963894.csv.dvc  accelerometer-data-2023-09-01 07:54:17.508286.csv.dvc  accelerometer-data-2023-09-01 07:54:56.218802.csv.dvc  accelerometer-data-2023-09-01 07:56:40.404358.csv.dvc  accelerometer-data-2023-09-01 07:56:53.696869.csv.dvc  accelerometer-data-2023-09-01 08:01:10.489035.csv.dvc
models/: .gitignore
notebooks/: plot-data.ipynb
reports/figures/: .gitignore
reports/predictions/steps/: .gitignore
scripts/: connect_and_plot.py
src/arduino/: __init__.py
src/step_counter/: conftest.py  data_sources.py  datasets.py  evaluate.py  test_data_sources.py  test_datases.py  test_evaluate.py
src/step_counter/evaluate/: __init__.py  evaluate_classifier.py
src/step_counter/models/: __init__.py  naive.py  test_naive.py
src/step_counter/models/dnn_keras/: export_tflite.py  predict.py  predict_tflite.py  test_export_tflite.py  test_train_predict.py  train.py
src/step_counter/models/logistic_regression/: predict.py  test_train_predict.py  train.py
src/step_counter/models/logistic_regression_keras/: train.py
src/step_counter/models/random/: naive.py  predict.py  test_naive.py  test_predict.py  test_train_predict.py  train.py
src/step_counter/train/: __init__.py  logistic_regression.py
