[project]

name = "step-counter"
version = "0.1.0"
description = "An AI step counter"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["ai", "machine learning", "arduino"]

authors = [
  {name = "Artur Kucia", email = "17779555+akucia@users.noreply.github.com" }
]

maintainers = [
  {name = "Artur Kucia", email = "17779555+akucia@users.noreply.github.com" }
]

dynamic = ["dependencies", "optional-dependencies"]

[project.urls]  # Optional
"Homepage" = "https://github.com/akucia/step-counter"


#[project.scripts]  # Optional
#sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.isort]
profile = "black"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "."
badge-format = "svg"
